fix layout overflow in grid

--- a/app/src/app/wiki/page/styles/wiki-page.styles.less
+++ b/app/src/app/wiki/page/styles/wiki-page.styles.less
@@ -3,7 +3,7 @@
 ::ng-deep .wiki {
   .page__container {
     display: grid;
-    grid-template-columns: auto 1fr;
+    grid-template-columns: auto minmax(0, 1fr);
   }
 
   .page__sidebar {
